# rag_project

./: README.md  pyproject.toml
db/2259cee5-68f9-42aa-899d-ab0605d820d9/: index_metadata.pickle
db/e3700790-5f63-4505-9d16-ced0d1ddf907/: index_metadata.pickle
docs/: frankenstein.txt  moby_dick.txt
src/: ingestion.py  ingestion2.py  main.py  query.py  retrival.py  user_chat.py
src/db/: chroma.sqlite3
