[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.92.0",
    "pypdf>=6.10.2",
    "fastembed>=0.4.0",
    "sentence-transformers>=5.4.1",
    "chromadb>=1.5.9",
    "openai>=1.0.0",
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.2",
    "langchain-openai>=1.2.1",
    "langchain-chroma>=1.1.0",
]
